--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,22 +48,25 @@ services:
   db:
     image: mariadb
     environment:
-      - MYSQL_ROOT_PASSWORD=
-      - MYSQL_DATABASE=
-      - MYSQL_USER=
-      - MYSQL_PASSWORD=
+      - MYSQL_ROOT_PASSWORD=test
+      - MYSQL_DATABASE=test
+      - MYSQL_USER=test
+      - MYSQL_PASSWORD=test
     ports:
       - 3306:3306
     volumes:
       - ./src/model/db:/var/lib/mysql
+    networks:
+      - internal
+      - external
   phpmyadmin:
     image: phpmyadmin
     ports:
       - 8080:80
     environment:
-      MYSQL_USER: 
-      MYSQL_PASSWORD: 
-      MYSQL_ROOT_PASSWORD: 
+      MYSQL_USER: test
+      MYSQL_PASSWORD: test
+      MYSQL_ROOT_PASSWORD: test
     depends_on:
       - db
     networks:
