Updated Dockefile to run the genetic in docker env.

--- a/docker/logic/Dockerfile
+++ b/docker/logic/Dockerfile
@@ -1,4 +1,9 @@
 FROM python:3.8
 
+WORKDIR /tmp/genetic/logic/
 
-ENTRYPOINT ["tail", "-f", "/dev/null"]
+COPY ../../src/logic .
+
+RUN "pip install -r requirements.txt"
+
+ENTRYPOINT ["python3", "logic.py", ">","output.txt"]
