--- a/docker/logic/Dockerfile
+++ b/docker/logic/Dockerfile
@@ -1,9 +1,12 @@
 FROM python:3.8
 
-WORKDIR /tmp/genetic/logic/
 
-COPY ../../src/logic .
+WORKDIR /tmp/genetic/logic
 
-RUN "pip install -r requirements.txt"
+COPY ./src/logic/requirements.txt .
+
+RUN pip install -r requirements.txt
 
 ENTRYPOINT ["python3", "logic.py", ">","output.txt"]
+
+#ENTRYPOINT ["tail", "-f", "/dev/null"]
