Added gRPC ports to optimization service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - db
     volumes:
       - ./src/logic:/home/logic
+    ports:
+      - 50051:50051
     networks:
       - internal
   
