--- a/docker/logic/Dockerfile
+++ b/docker/logic/Dockerfile
@@ -5,6 +5,8 @@ WORKDIR /tmp/genetic/logic
 
 COPY ./src/logic/requirements.txt .
 
+RUN pip install --upgrade pip
+
 RUN pip install -r requirements.txt
 
 ENTRYPOINT ["python3", "logic.py", "docker", ">","output.txt"]
