--- a/docker/logic/Dockerfile
+++ b/docker/logic/Dockerfile
@@ -1,6 +1,5 @@
 FROM python:3.8
 
-
 WORKDIR /tmp/genetic/logic
 
 COPY ./src/logic/requirements.txt .
@@ -9,4 +8,4 @@ RUN pip install --upgrade pip
 
 RUN pip install -r requirements.txt
 
-ENTRYPOINT ["python3", "logic.py", "docker", ">","output.txt"]
+ENTRYPOINT ["python3", "server.py", "docker"]
