--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,8 +32,8 @@ services:
       args:
         user: ruben
         uid: 1000
-      context:
-        ./docker/web
+      context: .
+      dockerfile: ./docker/web/Dockerfile
     ports:
       - "9000:9000"
     volumes:
