--- a/docker/logic/Dockerfile
+++ b/docker/logic/Dockerfile
@@ -1,11 +1,11 @@
 FROM python:3.8
 
-WORKDIR /tmp/genetic/logic
+WORKDIR /usr/src/app
 
-COPY ./src/logic/requirements.txt .
+COPY ./src/logic/ .
 
 RUN pip install --upgrade pip
 
 RUN pip install -r requirements.txt
 
-ENTRYPOINT ["python3", "server.py", "docker"]
+CMD ["python","-u","server.py", "docker"]
