--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,17 @@ services:
       - db
     networks:
       - internal
+  backend:
+    build:
+      context: ../data_lake/backend/      
+    ports:
+        - 8001:5000
+    env_file:
+        - ../data_lake/backend/.env
+    volumes:
+        - ../data_lake/backend:/app
+    networks:
+        - internal          
   db:
     image: mariadb
     environment:
